--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -6,7 +6,7 @@ allowed_ip        = "YOUR_IP/32"  # Replace with your IP in CIDR notation
 key_name          = "purple-team-key"
 qradar_ami        = "ami-0b8c2bd77c5e270cf"  # RHEL 8.8 x86_64
 splunk_ami       = "ami-xxxxxxxxxxxxxxxxx"  # Placeholder for Splunk AMI
-siem_type        = "qradar"                 # Options: qradar or splunk
+siem_type        = "splunk"                 # Options: splunk or qradar
 victim_ami        = "ami-0b8c2bd77c5e270cf"  # RHEL 8.8 x86_64
 victim_instance_type = "t3.micro"
 # aws_profile       = "your-aws-profile"  # Optional: specify AWS CLI profile
