--- a/.gitignore
+++ b/.gitignore
@@ -192,7 +192,10 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
-.cursor/
+.cursor/*
+!.cursor/environment.json
+!.cursor/mcp.json
+!.cursor/rules/
 
 # Node.js
 # Logs
