--- a/infrastructure/terraform.tfvars.example
+++ b/infrastructure/terraform.tfvars.example
@@ -22,6 +22,11 @@ kali_ami          = "ami-XXXXXXXXXXXXXXXXX"  # Kali Linux 2024.2 x86_64
 kali_ami_alias    = "/aws/service/marketplace/prod-XXXXX/XXXXXXX"  # Kali Linux 2024.2 x86_64
 kali_product_code = "XXXXXXXXXXXXXXXXX"  # Kali Linux 2024.2 x86_64
 kali_instance_type = "t3.micro"
+
+# Lab Container Host Configuration
+enable_lab_container_host = true
+lab_container_host_ami = "ami-08a6efd148b1f7504"  # Amazon Linux 2023 x86_64
+lab_container_host_instance_type = "t3.large"
 # aws_profile       = "your-aws-profile"  # Optional: specify AWS CLI profile
 
 # OpenAI API Configuration
