updated kali permissions

--- a/containers/kali/Dockerfile
+++ b/containers/kali/Dockerfile
@@ -29,7 +29,9 @@ RUN useradd -m -s /bin/bash -G sudo kali && \
 # Configure SSH
 RUN mkdir -p /var/run/sshd && \
     sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin no/' /etc/ssh/sshd_config && \
-    sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config && \
+    sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config && \
+    sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/' /etc/ssh/sshd_config && \
+    sed -i 's/#AuthorizedKeysFile/AuthorizedKeysFile/' /etc/ssh/sshd_config && \
     echo 'AllowUsers kali' >> /etc/ssh/sshd_config
 
 # Set up working directory and tool permissions
