refactor: rename Splunk red team index from keplerops-aptl-redteam to aptl-redteam
  Updates index name across all SIEM configurations and adds iputils-ping to Kali
  container for basic network utilities.

--- a/containers/kali/Dockerfile
+++ b/containers/kali/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update --allow-insecure-repositories && \
         kali-tools-top10 \
         rsyslog \
         openssh-server \
+        iputils-ping \
         && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
