--- a/red_team/kali_mcp/package.json
+++ b/red_team/kali_mcp/package.json
@@ -19,7 +19,7 @@
         "test:watch": "vitest"
     },
     "dependencies": {
-        "@modelcontextprotocol/sdk": "0.6.0",
+        "@modelcontextprotocol/sdk": "^1.17.2",
         "@types/ssh2": "^1.15.5",
         "ssh2": "^1.16.0",
         "zod": "^3.25.49"
