--- a/mcp-blue/package.json
+++ b/mcp-blue/package.json
@@ -20,8 +20,7 @@
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "0.6.0",
-        "zod": "^3.25.49",
-        "undici": "^6.19.8"
+        "zod": "^3.25.49"
     },
     "devDependencies": {
         "@types/node": "^20.11.24",
