fix: syslog config

--- a/config/wazuh_cluster/wazuh_manager.conf
+++ b/config/wazuh_cluster/wazuh_manager.conf
@@ -305,4 +305,13 @@
     <location>/var/ossec/logs/active-responses.log</location>
   </localfile>
 
+  <!-- Syslog input configuration for receiving logs from containers -->
+  <remote>
+    <connection>syslog</connection>
+    <port>514</port>
+    <protocol>udp</protocol>
+    <allowed-ips>172.20.0.0/16</allowed-ips>
+    <local_ip>172.20.0.10</local_ip>
+  </remote>
+
 </ossec_config>
