--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,6 +139,36 @@ services:
     security_opt:
       - seccomp:unconfined
 
+  # Juice Shop Victim - Optional OWASP Juice Shop target
+  juice-shop:
+    build:
+      context: ./containers/juice-shop
+      dockerfile: Dockerfile
+    container_name: aptl-juice-shop
+    hostname: juice-shop
+    restart: unless-stopped
+    profiles: ["juiceshop"]
+    networks:
+      aptl-network:
+        ipv4_address: 172.20.0.21
+    ports:
+      - "2024:22"    # SSH access
+      - "3000:3000"  # Juice Shop web app
+    environment:
+      - SIEM_IP=172.20.0.10
+      - LABADMIN_SSH_KEY_FILE=/keys/aptl_lab_key.pub
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+      - ./keys:/keys:ro
+      - juiceshop_logs:/var/log
+    tmpfs:
+      - /run
+      - /tmp
+    cap_add:
+      - SYS_ADMIN
+    security_opt:
+      - seccomp:unconfined
+
   # Kali Container - Red team attack platform  
   kali:
     build:
@@ -155,6 +185,7 @@ services:
     environment:
       - SIEM_IP=172.20.0.10  # wazuh.manager
       - VICTIM_IP=172.20.0.20
+      - JUICESHOP_IP=172.20.0.21
     volumes:
       - ./keys:/host-ssh-keys:ro
       - kali_operations:/home/kali/operations
@@ -192,3 +223,4 @@ volumes:
   # Application volumes
   victim_logs:
   kali_operations:
+  juiceshop_logs:
