Replace auditd with Wazuh command monitoring for container compatibility
  - Remove audit package and Docker capabilities (auditd fails in containers)
  - Add Wazuh process monitoring (60s intervals) and network monitoring (120s)
  - Add bash command history logging to /var/log/bash_history.log
  - Fix Wazuh agent configuration insertion to prevent XML parsing errors
  - Clean up audit.rules and related container setup artifacts

  Addresses SIEM detection gaps identified by mcp-red testing while maintaining
  container compatibility across all platforms.

--- a/containers/victim/Dockerfile
+++ b/containers/victim/Dockerfile
@@ -11,8 +11,11 @@ RUN dnf install -y epel-release && \
     systemd \
     systemd-sysv \
     iproute \
+    iproute-tc \
     hostname \
     procps-ng \
+    openssh-clients \
+    net-tools \
     && dnf clean all
 
 # Configure systemd for container use
@@ -61,6 +64,7 @@ RUN chmod +x /usr/local/bin/entrypoint.sh
 # Copy Wazuh install script
 COPY install-wazuh.sh /opt/purple-team/scripts/
 RUN chmod +x /opt/purple-team/scripts/install-wazuh.sh
+
 
 # Copy and enable Wazuh install service
 COPY wazuh-install.service /etc/systemd/system/
