--- a/mcp-blue/package.json
+++ b/mcp-blue/package.json
@@ -16,7 +16,11 @@
         "watch": "tsc --watch",
         "inspector": "npx @modelcontextprotocol/inspector build/index.js",
         "test": "vitest run",
-        "test:watch": "vitest"
+        "test:watch": "vitest",
+        "lint": "eslint src/**/*.ts",
+        "lint:fix": "eslint src/**/*.ts --fix",
+        "format": "prettier --write src/**/*.ts",
+        "format:check": "prettier --check src/**/*.ts"
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "0.6.0",
@@ -24,6 +28,10 @@
     },
     "devDependencies": {
         "@types/node": "^20.11.24",
+        "@typescript-eslint/eslint-plugin": "^8.41.0",
+        "@typescript-eslint/parser": "^8.41.0",
+        "eslint": "^9.34.0",
+        "prettier": "^3.6.2",
         "typescript": "^5.3.3",
         "vitest": "^1.0.0"
     }
