Add Kali Wazuh agent for CLI command logging
- Install Wazuh agent in Kali container with enhanced bash logging
- Create custom rules and decoders for red team events
- Update Docker configuration with required capabilities
- Log all CLI commands, authentication events to SIEM

--- a/config/wazuh_cluster/wazuh_manager.conf
+++ b/config/wazuh_cluster/wazuh_manager.conf
@@ -262,6 +262,9 @@
     
     <!-- Falco integration rules -->
     <rule_include>falco_rules.xml</rule_include>
+    
+    <!-- Kali red team logging rules -->
+    <rule_include>kali_redteam_rules.xml</rule_include>
   </ruleset>
 
   <rule_test>
