--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -186,6 +186,7 @@ services:
         ipv4_address: 172.20.0.23
     ports:
       - "2025:22"    # SSH access
+      - "3390:3389"  # RDP access
     environment:
       - SIEM_IP=172.20.0.10  # wazuh.manager
       - LABADMIN_SSH_KEY_FILE=/keys/aptl_lab_key.pub
