--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -152,21 +152,18 @@ services:
       aptl-network:
         ipv4_address: 172.20.0.21
     ports:
-      - "2024:22"    # SSH access
-      - "30000:30000" # Minetest server port
+      - "2024:22"       # SSH access
+      - "30000:30000/udp" # Minetest server port (UDP)
     environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      - CLI_ARGS=--gameid minetest_game
       - SIEM_IP=172.20.0.10  # wazuh.manager
       - LABADMIN_SSH_KEY_FILE=/keys/aptl_lab_key.pub
-    cap_add:
-      - SYS_NICE        # For process scheduling
-      - SYS_ADMIN       # Required for systemd in container
-      - SYS_RESOURCE    # For setting limits and OOM score
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:rw
       - ./keys:/keys:ro
-      - minetest_server_logs:/var/log
-    tmpfs:
-      - /run
+      - minetest_config:/config/.minetest
       - /tmp
     security_opt:
       - seccomp:unconfined
@@ -293,6 +290,7 @@ volumes:
   victim_logs:
   minetest_server_logs:
   minetest_client_logs:
+  minetest_config:
   minecraft_server_logs:
   minecraft_server_data:
   kali_operations:
