fix: Make minetest playable by reducing mouse sensitivity

--- a/containers/minecraft-server/ossec.conf.template
+++ b/containers/minecraft-server/ossec.conf.template
@@ -69,6 +69,12 @@
     <alias>bash_history</alias>
   </localfile>
 
+  <!-- Monitor local syslog for Minecraft events -->
+  <localfile>
+    <log_format>syslog</log_format>
+    <location>/var/log/syslog</location>
+  </localfile>
+
   <active-response>
     <disabled>no</disabled>
   </active-response>
