--- a/mcp-minetest-server/package.json
+++ b/mcp-minetest-server/package.json
@@ -20,8 +20,7 @@
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.17.2",
-        "@types/ssh2": "^1.15.5",
-        "ssh2": "^1.16.0",
+        "aptl-mcp-common": "file:../aptl-mcp-common",
         "zod": "^3.25.49"
     },
     "devDependencies": {
