--- a/mcp-minetest-client/package.json
+++ b/mcp-minetest-client/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "type": "module",
     "bin": {
-        "APTL Minetest Client MCP Server": "./build/index.js"
+        "aptl-minetest-client-mcp-server": "./build/index.js"
     },
     "files": [
         "build"
