--- a/mcp-minetest-server/docker-lab-config.json
+++ b/mcp-minetest-server/docker-lab-config.json
@@ -6,8 +6,7 @@
     "description": "APTL Minetest Server MCP Server - Provides AI agents with secure access to Minetest Server container operations in the APTL (Advanced Purple Team Lab) environment.",
     "toolPrefix": "mc_server",
     "targetName": "Minetest Server",
-    "configKey": "minetest-server",
-    "envPrefix": "APTL_MINETEST_SERVER"
+    "configKey": "minetest-server"
   },
   "lab": {
     "name": "aptl-minetest-server",
