--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   # Wazuh Manager
   wazuh.manager:
+    profiles: ["wazuh"]
     image: wazuh/wazuh-manager:4.12.0
     hostname: wazuh.manager
     restart: always
@@ -53,6 +54,7 @@ services:
 
   # Wazuh Indexer
   wazuh.indexer:
+    profiles: ["wazuh"]
     image: wazuh/wazuh-indexer:4.12.0
     hostname: wazuh.indexer
     restart: always
@@ -82,6 +84,7 @@ services:
 
   # Wazuh Dashboard
   wazuh.dashboard:
+    profiles: ["wazuh"]
     image: wazuh/wazuh-dashboard:4.12.0
     hostname: wazuh.dashboard
     restart: always
@@ -114,6 +117,7 @@ services:
 
   # Victim Container - Target system for attacks
   victim:
+    profiles: ["victim"]
     build:
       context: ./containers/victim
       dockerfile: Dockerfile
@@ -144,6 +148,7 @@ services:
 
   # Minetest Server Container - Game server for memory scanning demo
   minetest-server:
+    profiles: ["minetest-server"]
     build:
       context: ./containers/minetest-server
       dockerfile: Dockerfile
@@ -174,6 +179,7 @@ services:
 
   # Minetest Client Container - Client for memory scanning demo
   minetest-client:
+    profiles: ["minetest-client"]
     build:
       context: ./containers/minetest-client
       dockerfile: Dockerfile
@@ -205,6 +211,7 @@ services:
 
   # Minecraft Server Container - Official Minecraft server for testing
   minecraft-server:
+    profiles: ["minecraft-server"]
     build:
       context: ./containers/minecraft-server
       dockerfile: Dockerfile
@@ -239,6 +246,7 @@ services:
 
   # Kali Container - Red team attack platform  
   kali:
+    profiles: ["kali"]
     build:
       context: ./containers/kali
       dockerfile: Dockerfile
