--- a/mcp/mcp-reverse/docker-lab-config.json
+++ b/mcp/mcp-reverse/docker-lab-config.json
@@ -17,8 +17,8 @@
       "container_name": "aptl-reverse",
       "container_ip": "localhost",
       "ssh_key": "~/.ssh/aptl_lab_key",
-      "ssh_user": "reverse",
-      "ssh_port": 2023,
+      "ssh_user": "labadmin",
+      "ssh_port": 2027,
       "enabled": true
     }
   },
