fix: siem crash due to wrong custom rule paths

--- a/config/wazuh_cluster/wazuh_manager.conf
+++ b/config/wazuh_cluster/wazuh_manager.conf
@@ -261,10 +261,10 @@
     <rule_dir>etc/rules</rule_dir>
     
     <!-- Falco integration rules -->
-    <rule_include>falco_rules.xml</rule_include>
+    <rule_include>etc/rules/falco_rules.xml</rule_include>
     
     <!-- Kali red team logging rules -->
-    <rule_include>kali_redteam_rules.xml</rule_include>
+    <rule_include>etc/rules/kali_redteam_rules.xml</rule_include>
   </ruleset>
 
   <rule_test>
